fix images and nav
Moved theme toggle into nav menu.
Updated to se transparent PNGs.  SVGs were overlapping on mobile.

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -26,6 +26,12 @@
       "stores/*": [
         "src/stores/*"
       ],
+      "scripts/*": [
+        "src/scripts/*"
+      ],
+      "styles/*": [
+        "src/styles/*"
+      ],
       "vue$": [
         "node_modules/vue/dist/vue.runtime.esm-bundler.js"
       ]
