Added Easter Egg

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "jbear_creations",
   "version": "0.1.0",
   "description": "Portfolio of software development and woodworking projects by JBear",
-  "productName": "JBear Creations Portfolio",
+  "productName": "JBear Creations",
   "author": "Jesse Meyer <78508863+GuardianBob@users.noreply.github.com>",
   "private": true,
   "scripts": {
