--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "dotenv": "^16.0.3",
+    "gsap": "^3.11.4",
     "pinia": "^2.0.11",
+    "prismjs": "^1.29.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
